# photomind

./: .gitignore  CLAUDE.md  README.md  status.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/photomind/: config.py
backend/src/photomind/bridge/: main.py
backend/src/photomind/services/: action_log.py  clip.py  cluster.py  dedup.py  exif.py  face.py  geo.py  import_jobs_db.py  import_runner.py  local_scanner.py  meme.py  photos_db.py  rclone.py  rclone_manager.py  rename.py  thumbnail.py
backend/src/photomind/worker/: __main__.py  daemon.py  pipeline.py  scheduler.py
backend/tests/: test_action_log.py  test_bridge.py  test_clip.py  test_cluster.py  test_config_extended.py  test_daemon.py  test_daemon_local.py  test_dedup.py  test_exif.py  test_face.py  test_geo.py  test_import_jobs_db.py  test_import_runner.py  test_local_scanner.py  test_meme.py  test_photos_db.py  test_pipeline.py  test_rclone.py  test_rclone_manager.py  test_rename.py  test_scheduler.py  test_smoke.py  test_thumbnail.py
deploy/: env.production.template  photomind-bridge.service  photomind-daemon.service  photomind-frontend.service
deploy/nginx/: photomind.conf
docs/: documentation.md  plan.md  prd.md  techstack.md
frontend/: biome.json  drizzle.config.ts  package.json  vitest.config.ts
frontend/drizzle/: 0000_same_garia.sql  0001_silky_puma.sql
frontend/tests/: api.dashboard.test.ts  api.faces.clusters.patch.test.ts  api.faces.clusters.photos.test.ts  api.filesystem.test.ts  (+12 more)
scripts/: deploy.sh  first-time-setup.sh  review-pr.sh  smoke-test.sh  submit-pr.sh
(+39 files in other folders)
