[project]
name = "photomind"
version = "0.1.0"
description = "PhotoMind backend daemon — photo processing pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "piexif>=1.1.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/photomind"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints)
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]  # no type hints required in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/photomind --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/photomind"]
omit = ["tests/*"]
